--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 VITE_SITE=jun88cmd
-# VITE_ENDPOINT=https://api-minigame-att.attcloud.work/jun88cmd
-VITE_ENDPOINT=http://localhost:5557
+VITE_ENDPOINT=https://api-minigame-att.attcloud.work/jun88cmd
+# VITE_ENDPOINT=http://localhost:5557
 VITE_KEY=f8betminigame@2025
