--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@fingerprintjs/fingerprintjs": "^4.6.1",
     "@tailwindcss/vite": "^4.0.4",
     "@tanstack/react-query": "^5.80.7",
+    "antd": "^5.26.1",
     "axios": "^1.7.9",
+    "framer-motion": "^12.18.1",
     "html-react-parser": "^5.2.5",
     "moment": "^2.30.1",
     "notistack": "^3.0.2",
